# bergson

./: .gitignore  Dockerfile  pyproject.toml
bergson/: __init__.py  __main__.py  attributor.py  build.py  data.py  fsdp__main__.py  gradients.py  processing.py  training.py  utils.py
bergson/approx_unrolling/: EK_FAC.py  build_index.py  developing.ipynb  dtensor_playground.py  gradient_covariance.py  gradient_covariance_closure.py  gradient_covariance_sharded.py  kfac_fsdp.py  language_task.py  model_checkpoints.py  pile_data.py  shard_model_default.py  unrolling.py
bergson/hessians/: EK_FAC.py  analyzer.py  arguments.py  gradient_covariance.py  gradient_covariance_closure.py  gradient_covariance_sharded.py  loading_32B.py  shard_model.py  task.py
bergson/hessians/computer/: computer.py  factor_computer.py
bergson/hessians/factor/: config.py  covariance.py  eigen.py
bergson/hessians/module/: linear.py  tracked_module.py  utils.py
bergson/hessians/utils/: constants.py  logger.py
examples/: build_index.py  query_index.py
quelle/approx_unrolling/: EK_FAC.py  developing.ipynb  language_task.py  model_checkpoints.py  unrolling.py
quelle/hessians/: __init__.py  analyzer.py  arguments.py
quelle/hessians/computer/: __init__.py  computer.py  factor_computer.py  score_computer.py
quelle/hessians/factor/: config.py  covariance.py  eigen.py
quelle/hessians/module/: __init__.py  conv2d.py  linear.py  tracked_module.py  utils.py
quelle/hessians/score/: dot_product.py  pairwise.py  self.py
quelle/hessians/utils/: logger.py
(+10 files in other folders)
