[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bergson"
description = "Tracing the memory of neural nets with data attribution"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "accelerate", # For device_map in from_pretrained
    "datasets",
    "natsort",
    "peft>=0.15.2",
    "simple-parsing",
    "torch",
    "transformers",
]
version = "0.0.1"
[project.optional-dependencies]
dev = [
    "pre-commit",
]

[project.scripts]
bergson = "bergson.__main__:run"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[tool.uv]
prerelease = "allow"
[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
triton = [
    { index = "pytorch" }
]

[tool.pyright]
include = ["bergson*"]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["bergson*"]

[tool.ruff]
lint.ignore = ["E741"]   # Ambiguous variable name
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
lint.select = ["E", "F", "I"]
# Same as Black.
line-length = 88
